fixed: task height when overflow

--- a/frontend/src/components/content/column/task/task.css
+++ b/frontend/src/components/content/column/task/task.css
@@ -3,7 +3,7 @@
   background: var(--color-background);
   box-shadow: 0px 4px 6px 0px rgba(54, 78, 126, 0.1);
   width: 17rem;
-  height: 5.5rem;
+  min-height: 5.5rem;
   padding: var(--padding);
   display: flex;
   flex-direction: column;
